--- a/企業網路建置.md
+++ b/企業網路建置.md
@@ -1,1 +1,150 @@
-# SRE
+# 企業網路建置
+**本次建置橘色與粉色區塊相當於兩間不同的公司, 但仍可以透過apline router的功能將兩間NAT中的機器相互連線。本次規劃將網段一分為二, 2台Apline: AR5401 & AR5402當作router使用。**
+**#vm 可以建置第二張網卡, 需先將原先vm關機後再去新增第二張net adopter**
+![p1](https://i.imgur.com/QnIDthF.png)
+
+---
+本次切2網段, netmask 255.255.255.128
+
+
+
+
+
+|                |橘色區塊 IP|粉色區塊 IP|
+| -------------- | -------- | -------- |
+| Net ID         |10.0.54.0/25|10.0.54.128/25|
+|Server|10.0.54.1~10.0.54.10|10.0.54.129~10.0.54.138|
+| Fix IP         |10.0.54.11~10.0.54.63|10.0.54.139~10.0.54.191|
+| DHCP           |10.0.54.64~10.0.54.121|10.0.54.192~10.0.54.249|
+| Network Device |10.0.54.122~10.0.54.126|10.0.54.250~10.0.54.254|
+
+-------
+
+因AR5401/AR5402當作router使用, 先確認alpine路由功能是否有開啟, 若出現0代表還沒開起功能;出現1代表已經開通
+`sudo cat /proc/sys/net/ipv4/ip_forward`
+
+**Alpine永久啟用router功能**
+```
+sudo nano /etc/sysctl.conf
+在#下一行新增指令
+net.ipv4.ip_forward = 1
+```
+```
+讓指令立即生效
+sudo sysctl -p
+```
+-----
+
+原先安裝機器時IP都是先用DHCP, 現在必須更改為指定IP,步驟分別如下:
+
+**1. 橘色區塊Apline server**
+**先關機加入第二張網卡後一台主機就可以有兩種區網, 即使增加第二面網卡, 一台虛擬機只會有一個gateway!**
+重新開機後開始新增以下指令, 完成後再reboot
+
+```
+sudo nano /etc/network/interfaces
+
+auto lo
+iface lo inet loopback
+
+auto eth0
+iface eth0 inet static
+        address 120.96.143.54
+        netmask 255.255.255.0
+        gateway 120.96.143.254
+        hostname ar5401
+
+auto eth1
+iface eth1 inet static
+        address 10.0.54.126
+        netmask 255.255.255.128
+        hostname ar5401
+```
+
+**2. 橘色區塊Ubuntu server**
+UB5401與UB5402步驟都一樣, 輸入時不可以用tab。網卡可以先用ifconfig查看, 因為有些人網卡是ens33
+```
+sudo nano /etc/netplan/00-installar-config.yaml
+
+network:
+  ethernets:
+    ens32:
+      addresses: [10.0.54.1/25]
+      gateway4: 10.0.54.126
+  version: 2
+  
+sudo netplan try--->按enter
+sudo netplan apply (不用重新reboot)
+```
+
+-----
+
+**1. 粉色區塊Apline server**
+**先關機加入第二張網卡後一台主機就可以有兩種區網, 即使增加第二面網卡, 一台虛擬機只會有一個gateway!**
+重新開機後開始新增以下指令, 完成後再reboot
+
+```
+sudo nano /etc/network/interfaces
+
+auto lo
+iface lo inet loopback
+
+auto eth0
+iface eth0 inet static
+        address 120.96.143.154
+        netmask 255.255.255.0
+        gateway 120.96.143.254
+        hostname ar5402
+
+auto eth1
+iface eth1 inet static
+        address 10.0.54.254
+        netmask 255.255.255.128
+        hostname ar5402
+```
+
+**2. 粉色區塊Ubuntu server**
+輸入時不可以用tab。網卡可以先用ifconfig查看, 因為有些人網卡是ens33
+```
+sudo nano /etc/netplan/00-installar-config.yaml
+
+network:
+  ethernets:
+    ens32:
+      addresses: [10.0.54.129/25]
+      gateway4: 10.0.54.254
+  version: 2
+  
+sudo netplan try--->按enter
+sudo netplan apply (不用重新reboot)
+```
+
+**3. 粉色區塊windows XP**
+`網路上的芳鄰>檢視網路連線>區域連線>TCP/IP點選內容更改`
+
+----
+
+**更改Alpine路由表:**
+兩台Alpine要互相連接, 因此需更改路由表(net為Net ID;填的IP都是連接目的地的IP)
+```
+橘色Apline server:
+
+sudo nano /etc/local.d/route-set.start
+#!/bin/bash
+sudo route add -net 10.0.54.128 netmask 255.255.255.128 gw 120.96.143.154
+
+sudo chmod +x /etc/local.d/route-set.start
+sudo rc-update add local
+reboot
+```
+
+```
+粉色Apline aerver:
+sudo nano /etc/local.d/route-set.start
+#!/bin/bash
+sudo route add -net 10.0.54.0 netmask 255.255.255.128 gw 120.96.143.54
+
+sudo chmod +x /etc/local.d/route-set.start
+sudo rc-update add local
+reboot
+```
