--- a/企業網路建置.md
+++ b/企業網路建置.md
@@ -1,5 +1,7 @@
 # 企業網路建置
-**本次建置橘色與粉色區塊相當於兩間不同的公司, 但仍可以透過apline router的功能將兩間NAT中的機器相互連線。本次規劃將網段一分為二, 2台Apline: AR5401 & AR5402當作router使用。**
+**本次建置橘色與粉色區塊相當於兩間不同的公司, 但仍可以透過apline router的功能將兩間NAT中的機器相互連線。
+本次規劃將網段一分為二, 2台Apline: AR5401 & AR5402當作router使用。**
+
 **#vm 可以建置第二張網卡, 需先將原先vm關機後再去新增第二張net adopter**
 ![p1](https://i.imgur.com/QnIDthF.png)
 
@@ -21,6 +23,7 @@
 -------
 
 因AR5401/AR5402當作router使用, 先確認alpine路由功能是否有開啟, 若出現0代表還沒開起功能;出現1代表已經開通
+
 `sudo cat /proc/sys/net/ipv4/ip_forward`
 
 **Alpine永久啟用router功能**
