--- a/企業網路建置.md
+++ b/企業網路建置.md
@@ -1,9 +1,10 @@
 # 企業網路建置
-**本次建置橘色與粉色區塊相當於兩間不同的公司, 但仍可以透過apline router的功能將兩間NAT中的機器相互連線。
-本次規劃將網段一分為二, 2台Apline: AR5401 & AR5402當作router使用。**
+**本次建置橘色與粉色區塊相當於兩間不同的公司, 但仍可以透過alpine router的功能將兩間NAT中的機器相互連線。
+本次規劃將網段一分為二, 2台Alpine: AR5401 & AR5402當作router使用。**
 
 **#vm 可以建置第二張網卡, 需先將原先vm關機後再去新增第二張net adopter**
-![p1](https://i.imgur.com/QnIDthF.png)
+![p1](https://i.imgur.com/SUUVsDQ.png)
+
 
 ---
 本次切2網段, netmask 255.255.255.128
@@ -23,7 +24,6 @@
 -------
 
 因AR5401/AR5402當作router使用, 先確認alpine路由功能是否有開啟, 若出現0代表還沒開起功能;出現1代表已經開通
-
 `sudo cat /proc/sys/net/ipv4/ip_forward`
 
 **Alpine永久啟用router功能**
@@ -40,7 +40,7 @@ sudo sysctl -p
 
 原先安裝機器時IP都是先用DHCP, 現在必須更改為指定IP,步驟分別如下:
 
-**1. 橘色區塊Apline server**
+**1. 橘色區塊Alpine server**
 **先關機加入第二張網卡後一台主機就可以有兩種區網, 即使增加第二面網卡, 一台虛擬機只會有一個gateway!**
 重新開機後開始新增以下指令, 完成後再reboot
 
@@ -82,7 +82,7 @@ sudo netplan apply (不用重新reboot)
 
 -----
 
-**1. 粉色區塊Apline server**
+**1. 粉色區塊Alpine server**
 **先關機加入第二張網卡後一台主機就可以有兩種區網, 即使增加第二面網卡, 一台虛擬機只會有一個gateway!**
 重新開機後開始新增以下指令, 完成後再reboot
 
