--- a/企業網路建置圖/企業網路建置.md
+++ b/企業網路建置圖/企業網路建置.md
@@ -108,7 +108,7 @@ iface eth1 inet static
 ```
 
 **2. 粉色區塊Ubuntu server**
-輸入時不可以用tab。網卡可以先用ifconfig查看, 因為有些人網卡是ens33
+輸入時不可以用tab。網卡可以先用ifconfig -a查看, 因為有些人網卡是ens33
 ```
 sudo nano /etc/netplan/00-installar-config.yaml
 
