--- a/企業網路建置圖/企業網路建置.md
+++ b/企業網路建置圖/企業網路建置.md
@@ -66,7 +66,7 @@ iface eth1 inet static
 ```
 
 **2. 橘色區塊Ubuntu server**
-UB5401與UB5402步驟都一樣, 輸入時不可以用tab。網卡可以先用ifconfig查看, 因為有些人網卡是ens33
+UB5401與UB5402步驟都一樣, 輸入時不可以用tab。網卡可以先用ifconfig -a查看, 因為有些人網卡是ens33
 ```
 sudo nano /etc/netplan/00-installar-config.yaml
 
